--- a/test/index.html
+++ b/test/index.html
@@ -11,19 +11,21 @@
 	<h2 id="qunit-banner"></h2>
 	<div id="qunit-testrunner-toolbar"></div>
 	<h2 id="qunit-userAgent"></h2>
-	<ol id="qunit-tests"></ol>
 	<div id="test-content">
 		<div id="hexagonal-grid" class="grid-test"></div>
 	</div>
+	<ol id="qunit-tests"></ol>
 	<script type="text/javascript" src="../src/hex.core.js"></script>
+	<script type="text/javascript" src="../src/hex.element.js"></script>
 	<script type="text/javascript" src="../src/hex.event.js"></script>
 	<script type="text/javascript" src="../src/hex.grid.js"></script>
 	<script type="text/javascript" src="../src/hex.sprite.js"></script>
 	<script type="text/javascript" src="qunit/qunit.js"></script>
 	<script type="text/javascript" src="unit/base.js"></script>
 	<script type="text/javascript" src="unit/core.js"></script>
-	<script type="text/javascript" src="unit/grid.js"></script>
+	<script type="text/javascript" src="unit/element.js"></script>
 	<script type="text/javascript" src="unit/event.js"></script>
+	<script type="text/javascript" src="unit/grid.js"></script>
 	<script type="text/javascript" src="unit/sprite.js"></script>
 </body>
 </html>
