breaking hexagonal grid geometry out to separate file

--- a/test/index.html
+++ b/test/index.html
@@ -19,6 +19,7 @@
 	<script type="text/javascript" src="../src/hex.element.js"></script>
 	<script type="text/javascript" src="../src/hex.event.js"></script>
 	<script type="text/javascript" src="../src/hex.grid.js"></script>
+	<script type="text/javascript" src="../src/hex.grid.hexagonal.js"></script>
 	<script type="text/javascript" src="../src/hex.sprite.js"></script>
 	<script type="text/javascript" src="qunit/qunit.js"></script>
 	<script type="text/javascript" src="unit/base.js"></script>
