--- a/test/index.html
+++ b/test/index.html
@@ -13,6 +13,7 @@
 	<h2 id="qunit-userAgent"></h2>
 	<div id="test-content">
 		<div id="hexagonal-grid" class="grid-test"></div>
+		<div id="rectangular-grid" class="grid-test"></div>
 	</div>
 	<ol id="qunit-tests"></ol>
 	<script type="text/javascript" src="../src/hex.core.js"></script>
@@ -20,6 +21,7 @@
 	<script type="text/javascript" src="../src/hex.event.js"></script>
 	<script type="text/javascript" src="../src/hex.grid.js"></script>
 	<script type="text/javascript" src="../src/hex.grid.hexagonal.js"></script>
+	<script type="text/javascript" src="../src/hex.grid.rectangular.js"></script>
 	<script type="text/javascript" src="../src/hex.sprite.js"></script>
 	<script type="text/javascript" src="qunit/qunit.js"></script>
 	<script type="text/javascript" src="unit/base.js"></script>
