--- a/test/index.html
+++ b/test/index.html
@@ -12,9 +12,10 @@
 	<div id="qunit-testrunner-toolbar"></div>
 	<h2 id="qunit-userAgent"></h2>
 	<div id="test-content">
+		<div class="grid-test" id="skew-grid"></div>
+		<div class="grid-test" id="triangular-grid"></div>
 		<div class="grid-test" id="hexagonal-grid"></div>
 		<div class="grid-test" id="rectangular-grid"></div>
-		<div class="grid-test" id="skew-grid"></div>
 	</div>
 	<ol id="qunit-tests"></ol>
 	<script type="text/javascript" src="../src/hex.core.js"></script>
@@ -24,6 +25,7 @@
 	<script type="text/javascript" src="../src/hex.grid.hexagonal.js"></script>
 	<script type="text/javascript" src="../src/hex.grid.rectangular.js"></script>
 	<script type="text/javascript" src="../src/hex.grid.skew.js"></script>
+	<script type="text/javascript" src="../src/hex.grid.triangular.js"></script>
 	<script type="text/javascript" src="../src/hex.sprite.js"></script>
 	<script type="text/javascript" src="qunit/qunit.js"></script>
 	<script type="text/javascript" src="unit/base.js"></script>
