--- a/test/index.html
+++ b/test/index.html
@@ -12,11 +12,13 @@
 	<div id="qunit-testrunner-toolbar"></div>
 	<h2 id="qunit-userAgent"></h2>
 	<div id="test-content">
+		<h3>grid tests</h3>
 		<div class="grid-test" id="skew-grid"></div>
 		<div class="grid-test" id="triangular-grid"></div>
 		<div class="grid-test" id="hexagonal-grid"></div>
 		<div class="grid-test" id="rectangular-grid"></div>
 	</div>
+	<h3>qunit tests</h3>
 	<ol id="qunit-tests"></ol>
 	<script type="text/javascript" src="../src/hex.core.js"></script>
 	<script type="text/javascript" src="../src/hex.element.js"></script>
