adding support for regions

--- a/test/index.html
+++ b/test/index.html
@@ -12,6 +12,9 @@
 	<div id="qunit-testrunner-toolbar"></div>
 	<h2 id="qunit-userAgent"></h2>
 	<div id="test-content">
+		<h3>region tests</h3>
+		<div class="grid-test" id="regioned-hexagonal-grid"></div>
+		<div class="grid-test" id="regioned-rectangular-grid"></div>
 		<h3>grid tests</h3>
 		<div class="grid-test" id="skew-grid"></div>
 		<div class="grid-test" id="triangular-grid"></div>
@@ -28,6 +31,7 @@
 	<script type="text/javascript" src="../src/hex.grid.rectangular.js"></script>
 	<script type="text/javascript" src="../src/hex.grid.skew.js"></script>
 	<script type="text/javascript" src="../src/hex.grid.triangular.js"></script>
+	<script type="text/javascript" src="../src/hex.region.js"></script>
 	<script type="text/javascript" src="../src/hex.sprite.js"></script>
 	<script type="text/javascript" src="qunit/qunit.js"></script>
 	<script type="text/javascript" src="unit/base.js"></script>
@@ -35,6 +39,7 @@
 	<script type="text/javascript" src="unit/element.js"></script>
 	<script type="text/javascript" src="unit/event.js"></script>
 	<script type="text/javascript" src="unit/grid.js"></script>
+	<script type="text/javascript" src="unit/region.js"></script>
 	<script type="text/javascript" src="unit/sprite.js"></script>
 </body>
 </html>
