adding sprite support - still need to implement recycling

--- a/test/index.html
+++ b/test/index.html
@@ -12,6 +12,8 @@
 	<div id="qunit-testrunner-toolbar"></div>
 	<h2 id="qunit-userAgent"></h2>
 	<div id="test-content">
+		<h3>sprite tests</h3>
+		<div class="sprite-test" id="sprite-test"></div>
 		<h3>region tests</h3>
 		<div class="grid-test" id="regioned-hexagonal-grid"></div>
 		<div class="grid-test" id="regioned-rectangular-grid"></div>
