--- a/test/index.html
+++ b/test/index.html
@@ -1,47 +1,47 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en" dir="ltr">
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<title>hexlib test</title>
-	<link rel="stylesheet" type="text/css" media="all" href="qunit/qunit/qunit.css">
-	<link rel="stylesheet" type="text/css" media="all" href="test.css">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>hexlib test</title>
+  <link rel="stylesheet" type="text/css" media="all" href="//code.jquery.com/qunit/qunit-1.12.0.css">
+  <link rel="stylesheet" type="text/css" media="all" href="test.css">
 </head>
 <body class="flora">
-	<h1 id="qunit-header">hexlib test suite</h1>
-	<h2 id="qunit-banner"></h2>
-	<div id="qunit-testrunner-toolbar"></div>
-	<h2 id="qunit-userAgent"></h2>
-	<div id="test-content">
-		<h3>sprite tests</h3>
-		<div class="sprite-test" id="sprite-test"></div>
-		<h3>region tests</h3>
-		<div class="grid-test" id="regioned-hexagonal-grid"></div>
-		<div class="grid-test" id="regioned-rectangular-grid"></div>
-		<h3>grid tests</h3>
-		<div class="grid-test" id="skew-grid"></div>
-		<div class="grid-test" id="triangular-grid"></div>
-		<div class="grid-test" id="hexagonal-grid"></div>
-		<div class="grid-test" id="rectangular-grid"></div>
-	</div>
-	<h3>qunit tests</h3>
-	<ol id="qunit-tests"></ol>
-	<script type="text/javascript" src="../src/hex.core.js"></script>
-	<script type="text/javascript" src="../src/hex.element.js"></script>
-	<script type="text/javascript" src="../src/hex.event.js"></script>
-	<script type="text/javascript" src="../src/hex.grid.js"></script>
-	<script type="text/javascript" src="../src/hex.grid.hexagonal.js"></script>
-	<script type="text/javascript" src="../src/hex.grid.rectangular.js"></script>
-	<script type="text/javascript" src="../src/hex.grid.skew.js"></script>
-	<script type="text/javascript" src="../src/hex.grid.triangular.js"></script>
-	<script type="text/javascript" src="../src/hex.region.js"></script>
-	<script type="text/javascript" src="../src/hex.sprite.js"></script>
-	<script type="text/javascript" src="qunit/qunit/qunit.js"></script>
-	<script type="text/javascript" src="unit/base.js"></script>
-	<script type="text/javascript" src="unit/core.js"></script>
-	<script type="text/javascript" src="unit/element.js"></script>
-	<script type="text/javascript" src="unit/event.js"></script>
-	<script type="text/javascript" src="unit/grid.js"></script>
-	<script type="text/javascript" src="unit/region.js"></script>
-	<script type="text/javascript" src="unit/sprite.js"></script>
+  <h1 id="qunit-header">hexlib test suite</h1>
+  <h2 id="qunit-banner"></h2>
+  <div id="qunit-testrunner-toolbar"></div>
+  <h2 id="qunit-userAgent"></h2>
+  <div id="test-content">
+    <h3>sprite tests</h3>
+    <div class="sprite-test" id="sprite-test"></div>
+    <h3>region tests</h3>
+    <div class="grid-test" id="regioned-hexagonal-grid"></div>
+    <div class="grid-test" id="regioned-rectangular-grid"></div>
+    <h3>grid tests</h3>
+    <div class="grid-test" id="skew-grid"></div>
+    <div class="grid-test" id="triangular-grid"></div>
+    <div class="grid-test" id="hexagonal-grid"></div>
+    <div class="grid-test" id="rectangular-grid"></div>
+  </div>
+  <h3>qunit tests</h3>
+  <ol id="qunit-tests"></ol>
+  <script type="text/javascript" src="../src/hex.core.js"></script>
+  <script type="text/javascript" src="../src/hex.element.js"></script>
+  <script type="text/javascript" src="../src/hex.event.js"></script>
+  <script type="text/javascript" src="../src/hex.grid.js"></script>
+  <script type="text/javascript" src="../src/hex.grid.hexagonal.js"></script>
+  <script type="text/javascript" src="../src/hex.grid.rectangular.js"></script>
+  <script type="text/javascript" src="../src/hex.grid.skew.js"></script>
+  <script type="text/javascript" src="../src/hex.grid.triangular.js"></script>
+  <script type="text/javascript" src="../src/hex.region.js"></script>
+  <script type="text/javascript" src="../src/hex.sprite.js"></script>
+  <script type="text/javascript" src="//code.jquery.com/qunit/qunit-1.12.0.js"></script>
+  <script type="text/javascript" src="unit/base.js"></script>
+  <script type="text/javascript" src="unit/core.js"></script>
+  <script type="text/javascript" src="unit/element.js"></script>
+  <script type="text/javascript" src="unit/event.js"></script>
+  <script type="text/javascript" src="unit/grid.js"></script>
+  <script type="text/javascript" src="unit/region.js"></script>
+  <script type="text/javascript" src="unit/sprite.js"></script>
 </body>
 </html>
